# and-coding-challenges

./: .gitignore  README.md
2021/challenge-01-lights/: lights.min.lua
2021/challenge-02-up-and-atom/: Cargo.toml
2021/challenge-02-up-and-atom/src/: main.rs  symbols.rs
2021/challenge-03-snake/: Cargo.toml  README.md
2021/challenge-03-snake/src/: main.rs
2021/challenge-04-mazes/: README.md
2021/challenge-05-short-changed/: README.md  package-lock.json  package.json
2021/challenge-06-clock-wise/: README.md
2021/challenge-07-codings-a-blast/: Package.swift  README.md
2021/challenge-08-challenge-viii/: dub.json
2021/challenge-09-hllo-worl/: .gitignore  README.md  hllo-worl.asd
2021/challenge-10-mr-president/: README.md  settings.gradle.kts
2021/challenge-11-poetry-in-a-haystack/: README.md  poetry_detector.py
2021/challenge-12-number-rendering/: README.md  render_number.rb
2021/challenge-13-challenging-chains/: README.md  chains.cpp  input.txt
2022/challenge-02-word-buckets/: README.md  bucketify.js  bucketify.test.js  package.json
2022/challenge-03-satellites/: Cargo.toml  README.md
challenge-01-lights/: README.md  lights.lua
challenge-02-up-and-atom/: Cargo.toml  README.md
challenge-04-mazes/: README.md
challenge-06-clock-wise/: README.md  build.sh
challenge-07-codings-a-blast/: .gitignore  README.md  defuser.swift
challenge-08-challenge-viii/: .gitignore  README.md
challenge-10-mr-president/: build.gradle.kts  run.sh
challenge-11-poetry-in-a-haystack/: .gitignore  README.md  poetry_detector.py
(+43 files in other folders)
