[package]
name = "challenge-02-up-and-atom"
version = "0.1.0"
authors = ["Alex King <alex.king@and.digital>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"                               # A JSON serialization file format
phf = { version = "0.8", features = ["macros"] }    # Runtime support for perfect hash function data structures
regex = "1.5.4"                                     # An implementation of regular expressions for Rust
