[package]
name = "challenge-03-snake"
version = "0.1.0"
authors = ["Alex King <alex.king@and.digital>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }  # A refreshingly simple data-driven game engine and app framework
rand = "0.8.3"                                        # Random number generators and other randomness functionality. 
